[[bin]]
name = 'node-template'
[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '0.8.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '5a94966e91fcd20d5a7981ae8186090221d8f096'
version = '2.0.0'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']

[package]
authors = ['Anonymous']
build = 'build.rs'
description = 'A new FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
